--- a/pages/adminUser.html
+++ b/pages/adminUser.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>cats后台产品管理</title>
+		<title>cats后台用户管理</title>
 		<link rel="import" href="common/js_css.html" />
 	</head>
 
@@ -261,8 +261,8 @@
 							<div class="widget am-cf">
 								<!--当前位置-->
 								<div class="widget-head am-cf">
-									<div class="page-header-heading"><span class="am-icon-product-hunt page-header-heading-icon"></span> 产品管理 <small>/ productManage</small></div>
-									<p class="page-header-description">这个是产品管理页.您可以再次增删改查 cats 的产品信息.</p>
+									<div class="page-header-heading"><span class="am-icon-user page-header-heading-icon"></span> 产品管理 <small>/ productManage</small></div>
+									<p class="page-header-description">这个是用户管理页.您可以在此增删改查 cats 后台的用户信息.</p>
 								</div>
 								<!--当前位置结束-->
 								<div class="widget-body am-fr">
@@ -291,7 +291,7 @@
 										</div>
 										<div class="am-u-sm-12 am-u-md-12 am-u-lg-3">
 											<div class="am-input-group am-input-group-sm tpl-form-border-form cl-p">
-												<input type="text" class="am-form-field" placeholder="请输入产品名称">
+												<input type="text" class="am-form-field" placeholder="请输入用户姓名">
 												<span class="am-input-group-btn">
             <button class="am-btn  am-btn-default am-btn-success tpl-table-list-field am-icon-search" type="button"></button>
           </span>
@@ -306,7 +306,7 @@
 												<tr>
 													<th>序号</th>
 													<th>编码</th>
-													<th>产品名称</th>
+													<th>姓名</th>
 													<th>状态</th>
 													<th>操作</th>
 												</tr>
@@ -314,8 +314,8 @@
 											<tbody>
 												<tr>
 													<td>1</td>
-													<td>1001</td>
-													<td>饱学席</td>
+													<td>songjie</td>
+													<td>宋杰</td>
 													<td>启用</td>
 													<td>
 														<div class="tpl-table-black-operation">
@@ -330,8 +330,8 @@
 												</tr>
 												<tr>
 													<td>2</td>
-													<td>1002</td>
-													<td>考吧</td>
+													<td>songjie</td>
+													<td>宋杰</td>
 													<td>启用</td>
 													<td>
 														<div class="tpl-table-black-operation">
@@ -346,8 +346,8 @@
 												</tr>
 												<tr>
 													<td>3</td>
-													<td>1003</td>
-													<td>税务实训平台</td>
+													<td>songjie</td>
+													<td>宋杰</td>
 													<td>启用</td>
 													<td>
 														<div class="tpl-table-black-operation">
@@ -362,8 +362,8 @@
 												</tr>
 												<tr>
 													<td>4</td>
-													<td>1004</td>
-													<td>考试宝-g</td>
+													<td>songjie</td>
+													<td>宋杰</td>
 													<td>启用</td>
 													<td>
 														<div class="tpl-table-black-operation">
@@ -378,8 +378,8 @@
 												</tr>
 												<tr>
 													<td>5</td>
-													<td>1005</td>
-													<td>考试宝-x</td>
+													<td>songjie</td>
+													<td>宋杰</td>
 													<td>启用</td>
 													<td>
 														<div class="tpl-table-black-operation">
@@ -394,8 +394,8 @@
 												</tr>
 												<tr>
 													<td>6</td>
-													<td>1006</td>
-													<td>考试宝-k</td>
+													<td>songjie</td>
+													<td>宋杰</td>
 													<td>停用</td>
 													<td>
 														<div class="tpl-table-black-operation">
@@ -411,8 +411,8 @@
 
 												<tr>
 													<td>7</td>
-													<td>1007</td>
-													<td>代理记账云平台</td>
+													<td>songjie</td>
+													<td>宋杰</td>
 													<td>停用</td>
 													<td>
 														<div class="tpl-table-black-operation">
@@ -428,8 +428,8 @@
 
 												<tr>
 													<td>8</td>
-													<td>1008</td>
-													<td>cmac基础训练</td>
+													<td>songjie</td>
+													<td>宋杰</td>
 													<td>停用</td>
 													<td>
 														<div class="tpl-table-black-operation">
@@ -445,8 +445,8 @@
 
 												<tr>
 													<td>9</td>
-													<td>1009</td>
-													<td>代理记账云平台</td>
+													<td>songjie</td>
+													<td>宋杰</td>
 													<td>停用</td>
 													<td>
 														<div class="tpl-table-black-operation">
@@ -462,8 +462,8 @@
 
 												<tr>
 													<td>10</td>
-													<td>1010</td>
-													<td>竞赛平台</td>
+													<td>songjie</td>
+													<td>宋杰</td>
 													<td>停用</td>
 													<td>
 														<div class="tpl-table-black-operation">
